--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "zendoc-cli",
+  "name": "stackpathmetrics-cli",
   "version": "1.0.0",
-  "description": "Cli to import zendesk articles from markdown files.",
+  "description": "Cli to output sites by how much bandwidth they use",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamesvidler/zendoc"
+    "url": "https://github.com/jamesvidler/stackpath-metrics"
   },
   "author": "James Vidler",
   "license": "ISC",
